--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   
   <script src="Blob.js"></script>
   <script src="fileSaver.js"></script>
-  <script src="https://eu-bee-resources.s3.amazonaws.com/plugin/BeePlugin.js"></script>
+  <script src="https://app-rsrc.getbee.io/plugin/BeePlugin.js"></script>
 
   <script type="text/javascript">
 
